--- a/hardco-porfolio/package.json
+++ b/hardco-porfolio/package.json
@@ -26,6 +26,8 @@
     "react-scripts": "4.0.3",
     "react-zoom-pan-pinch": "^2.1.3",
     "recharts": "^2.1.4",
+    "smoothscroll-anchor-polyfill": "^1.3.2",
+    "smoothscroll-polyfill": "^0.4.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
