--- a/hardco-porfolio/package.json
+++ b/hardco-porfolio/package.json
@@ -13,7 +13,6 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
     "ityped": "^1.0.3",
-    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
@@ -26,6 +25,7 @@
     "react-scripts": "4.0.3",
     "react-zoom-pan-pinch": "^2.1.3",
     "recharts": "^2.1.4",
+    "sass": "^1.49.7",
     "smoothscroll-anchor-polyfill": "^1.3.2",
     "smoothscroll-polyfill": "^0.4.4",
     "web-vitals": "^1.0.1"
